@@ -47,6 +47,9 @@ New features:
   	  and starpu_mpi_initialize() have been made deprecated. One
 	  should now use starpu_mpi_init() which will initialise MPI
 	  by calling MPI_Init_Thread if is not already done.
+        - Collective detached operations have new parameters, a
+	  callback function and a argument. This is to be consistent
+	  with the detached point-to-point communications.
 
 Changes:
   * Fix the block filter functions.
